--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,6 +41,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
         name: ${{ github.event.client_payload.short_hash }}
-        commit: ${{ github.event.client_payload.sha }}
+        #commit: ${{ github.event.client_payload.sha }}
         tag: ${{ github.event.client_payload.short_hash }}
         artifacts: "dist/*"
