--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
       run: GOOS=darwin GOARCH=arm64 go build -ldflags "-X main.Version=${{ github.event.client_payload.version }}" -o dist/wgctl-darwin-arm64 .
 
     - name: Build-Windows-Amd64
-      run: GOOS=windows GOARCH=amd64 go build -ldflags "-X main.Version=${{ github.event.client_payload.version }}" -o dist/wgctl-windows-amd64 .
+      run: GOOS=windows GOARCH=amd64 go build -ldflags "-X main.Version=${{ github.event.client_payload.version }}" -o dist/wgctl-windows-amd64.exe .
 
     - name: Build-Linux-Amd64
       run: GOOS=linux GOARCH=amd64 go build -ldflags "-X main.Version=${{ github.event.client_payload.version }}" -o dist/wgctl-linux-amd64 .
